# Fraud_Detection_using_BlockChain

./: README.md  index.js  package-lock.json  package.json
authentication/: mod.rs
authentication/node/: Cargo.toml  chain_spec.rs  service.rs
authentication/scripts/: deploy.sh
backend/: .env
backend/api/: .env  index.js  package-lock.json  package.json
backend/api/routes/: product.js  qr.js
backend/api/utils/: blockchain.js
backend/parachain/: truffle-config.js
backend/parachain/contracts/: product_auth.contract  supply_chain.contract
backend/parachain/migrations/: 2_deploy_contracts.js
backend/parachain/test/: product_auth.test.js
docs/: api-docs.md  architecture.md  deployment-guide.md
frontend/components/: ProductInfo.js  QRScanner.js
frontend/pages/: Home.js
frontend/public/: index.html
frontend/src/: App.js
frontend/styles/: global.css
information/: App.js  package.json
information/pages/: Home.js  VerifyProduct.js
information/smart-contracts/: product_auth.contract
scripts/: generate_qr.js  verify_product.js
verification/tests/: product.test.js  qr.test.js
