[package]
name = "node-template"
version = "3.0.0"
authors = ["Rahul KB <rahulbasavaraj1@example.com>"]
edition = "2021"

[dependencies]
# Substrate core dependencies (from the polkadot-v0.9.28 branch)
sc-cli = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sc-service = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sc-network = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sc-consensus = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

# Local runtime dependency
node-template-runtime = { path = "../runtime" }

[features]
default = ["std"]
std = [
    "sc-cli/std",
    "sc-service/std",
    "sc-network/std",
    "sc-consensus/std",
]

[build-dependencies]
substrate-wasm-builder = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
